crates/formatter/tests/snapshots/snapshots__migrations__000192_workspace_agent_order.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_agents drop column display_order;
