crates/formatter/tests/snapshots/snapshots__migrations__000194_trigger_delete_user_user_link.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- We need to delete all existing user_links for soft-deleted users
delete from user_links where user_id in (select id from users where deleted);

-- Drop the old trigger
drop trigger trigger_update_users on users;
-- Drop the old function
drop function delete_deleted_user_api_keys;

-- When we soft-delete a user, we also want to delete their API key.
-- The previous function deleted all api keys. This extends that with user_links.
create function delete_deleted_user_resources()
returns trigger
language plpgsql
as $$
declare
begin
	if (NEW.deleted) then
		-- Remove their api_keys
		delete from api_keys
		where user_id = OLD.id;

		-- Remove their user_links
		-- Their login_type is preserved in the users table.
		-- Matching this user back to the link can still be done by their
		-- email if the account is undeleted. Although that is not a guarantee.
		delete from user_links
		where user_id = OLD.id;
	end if;
	return NEW;
end;
$$;


-- Update it to the new trigger
create trigger trigger_update_users
	after insert or update on users
	for each row
	when (NEW.deleted = true)
	execute procedure delete_deleted_user_resources();


-- Prevent adding new user_links for soft-deleted users
create function insert_user_links_fail_if_user_deleted()
returns trigger
language plpgsql
as $$
declare
begin
	if (NEW.user_id is not null) then
		if (select deleted from users where id = NEW.user_id limit 1) then
			raise exception 'Cannot create user_link for deleted user';
		end if;
	end if;
	return NEW;
end;
$$;

create trigger trigger_upsert_user_links
	before insert or update on user_links
	for each row
	execute procedure insert_user_links_fail_if_user_deleted();
