crates/formatter/tests/snapshots/snapshots__migrations__000196_external_auth_providers_jsonb.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- We cannot alter the column type while a view depends on it, so we drop it and recreate it.
drop view template_version_with_user;

-- Does the opposite of `migrate_external_auth_providers_to_jsonb`
-- eg. `'[{"id": "github"}, {"id": "gitlab"}]'::jsonb` would become `'{github,gitlab}'::text[]`
create or replace function revert_migrate_external_auth_providers_to_jsonb(
	jsonb
)
returns text[]
language plpgsql
as $$
	declare
		result text[];
	begin
		if jsonb_typeof($1) = 'null' then
			result := '{}';
		else
			select array_agg(id::text)
			into result
			from (
				select jsonb_array_elements($1) ->> 'id' as id
			) as external_auth_provider_ids;
		end if;
		return result;
	end;
$$;

-- Remove the non-null constraint and default
alter table template_versions alter column external_auth_providers drop default;
alter table template_versions
	alter column external_auth_providers drop not null;

-- Update the column type and migrate the values
alter table template_versions
	alter column external_auth_providers type text[] using revert_migrate_external_auth_providers_to_jsonb(
		external_auth_providers
	);

-- Recreate `template_version_with_user` as described in dump.sql
create view template_version_with_user as
select
	template_versions.id,
	template_versions.template_id,
	template_versions.organization_id,
	template_versions.created_at,
	template_versions.updated_at,
	template_versions.name,
	template_versions.readme,
	template_versions.job_id,
	template_versions.created_by,
	template_versions.external_auth_providers,
	template_versions.message,
	template_versions.archived,
	coalesce(visible_users.avatar_url, ''::text) as created_by_avatar_url,
	coalesce(visible_users.username, ''::text) as created_by_username
from (
	template_versions
		left join visible_users on (template_versions.created_by = visible_users.id)
);

comment on view template_version_with_user is 'Joins in the username + avatar url of the created by user.';

-- Cleanup
drop function revert_migrate_external_auth_providers_to_jsonb;
